--- a/sis-escolar/index.html
+++ b/sis-escolar/index.html
@@ -29,7 +29,7 @@
           <input type="checkbox" value="remember-me"> Lembrar de mim
         </label>
       </div>
-      <button class="btn btn-lg btn-dark btn-block" type="submit"><a href="../LuisFelipeSalvarani/Home.php" class="botao">Login</a></button>
+      <button class="btn btn-lg btn-dark btn-block" type="submit"><a href="../sis-escolar/home.html" class="botao">Login</a></button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
   </body>
