--- a/sis-escolar/diciplinas-gerenciar.html
+++ b/sis-escolar/diciplinas-gerenciar.html
@@ -15,16 +15,17 @@
 </head>
 
 <body class="text-center">
-  <h1 class="font-weight-bold text-dark mb-5">Sistema Escolar</h1>
+  <h1 class="font-weight-bold text-dark mb-3">Sistema Escolar</h1>
+  <h3 class="h3 mb-3 font-weight-normal mb-5">Gerenciar Diciplinas</h3>
   <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-      <a class="nav-link btn-dark mb-3" href="../sis-escolar/alunos-inserir.html">Gerenciar Alunos</a>
+      <a class="nav-link btn-dark mb-3" href="../sis-escolar/diciplina-inserir.html">Adicionar Diciplina</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link btn-dark mb-3" href="../sis-escolar/turmas-inserir.html">Gerenciar Turmas</a>
+      <a class="nav-link btn-dark mb-3" href="../sis-escolar/diciplinas-listar.php">Listar Diciplinas</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link btn-dark" href="../sis-escolar/diciplinas-gerenciar.html">Gerenciar Diciplinas</a>
+      <a class="nav-link btn-dark" href="../sis-escolar/home.html">Voltar</a>
     </li>
   </ul>
 </body>
