--- a/sis-escolar/index.html
+++ b/sis-escolar/index.html
@@ -13,10 +13,9 @@
     <!-- Estilos customizados para esse template -->
     <link href="https://getbootstrap.com.br/docs/4.1/examples/sign-in/signin.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="index.css">
   </head>
 
-  <body class="text-center">
+  <body class="text-center flex-column">
     <h1 class="font-weight-bold text-dark">Sistema Escolar</h1>
     <form class="form-signin">
       <h1 class="h3 mb-3 font-weight-normal">Login</h1>
@@ -29,7 +28,8 @@
           <input type="checkbox" value="remember-me"> Lembrar de mim
         </label>
       </div>
-      <button class="btn btn-lg btn-dark btn-block" type="submit"><a href="../sis-escolar/home.html" class="botao">Login</a></button>
+      <!--<button class="btn btn-lg btn-dark btn-block" type="submit"><a href="../sis-escolar/home.html" class="botao">Login</a></button>-->
+      <a href="../sis-escolar/home.html" class="btn btn-lg btn-dark btn-block">Login</a>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
   </body>
