--- a/sis-escolar/diciplina-inserir.html
+++ b/sis-escolar/diciplina-inserir.html
@@ -7,9 +7,8 @@
     <title>Sistema Escolar</title>
     <link href="https://getbootstrap.com.br/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com.br/docs/4.1/examples/sign-in/signin.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
 </head>
-<body class="text-center">
+<body class="text-center flex-column">
     <h1 class="font-weight-bold text-dark">Sistema Acadêmico</h1>
     <h3 class="h3 mb-3 font-weight-normal">Nova Diciplina</h3>
     <form action="diciplinas-gravar.php" method="post">
