--- a/sis-escolar/diciplinas-gerenciar.html
+++ b/sis-escolar/diciplinas-gerenciar.html
@@ -11,10 +11,9 @@
   <link href="https://getbootstrap.com.br/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Estilos customizados para esse template -->
   <link href="https://getbootstrap.com.br/docs/4.1/examples/sign-in/signin.css" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
 </head>
 
-<body class="text-center">
+<body class="text-center flex-column">
   <h1 class="font-weight-bold text-dark mb-3">Sistema Escolar</h1>
   <h3 class="h3 mb-3 font-weight-normal mb-5">Gerenciar Diciplinas</h3>
   <ul class="nav nav-pills flex-column">
