--- a/sis-escolar/index.html
+++ b/sis-escolar/index.html
@@ -17,20 +17,19 @@
 
   <body class="text-center flex-column">
     <h1 class="font-weight-bold text-dark">Sistema Escolar</h1>
-    <form class="form-signin">
+    <form action="usuario-login.php" method="post" class="form-signin">
       <h1 class="h3 mb-3 font-weight-normal">Login</h1>
-      <label for="inputEmail" class="sr-only">Endereço de email</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email">
-      <label for="inputPassword" class="sr-only">Senha</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Senha">
+      <label for="usuario" class="sr-only">Usuário</label>
+      <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuário">
+      <label for="senha" class="sr-only">Senha</label>
+      <input type="password" id="senha" name="senha" class="form-control" placeholder="Senha">
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Lembrar de mim
         </label>
       </div>
-      <!--<button class="btn btn-lg btn-dark btn-block" type="submit"><a href="../sis-escolar/home.html" class="botao">Login</a></button>-->
-      <a href="../sis-escolar/home.html" class="btn btn-lg btn-dark btn-block">Login</a>
-      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+      <button class="btn btn-lg btn-dark btn-block" type="submit">Login</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
     </form>
   </body>
 </html>
